# qoxide

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
benches/: qoxide.rs
qoxide/: Cargo.toml
qoxide-lib/: Cargo.toml  readme.md
qoxide-lib/benches/: qoxide-lib.rs
qoxide-lib/src/: cli.rs  lib.rs
qoxide-lib/src/sql/: init.sql  reserve.sql  set_message_state.sql
qoxide/src/: main.rs
src/: lib.rs  main.rs  tests.rs
src/cli/: commands.rs  output.rs
src/sql/: get_size.sql  init.sql
