[package]
name = "qoxide"
version = "1.3.0"
edition = "2024"
description = "A lightweight local job queue backed by SQLite"
license = "MIT"
repository = "https://github.com/Haizzz/qoxide"
readme = "README.md"
keywords = ["queue", "job", "sqlite", "task"]
categories = ["data-structures", "database"]

[features]
default = []
cli = ["dep:clap", "dep:serde", "dep:serde_json", "dep:base64"]

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bin]]
name = "qoxide"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "qoxide"
harness = false
