[package]
name = "qoxide-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "qoxide-lib"
harness = false
