[package]
name = "qoxide"
version = "1.0.0"
edition = "2024"
description = "A lightweight local job queue backed by SQLite"
license = "MIT"
repository = "https://github.com/Haizzz/qoxide"
readme = "../README.md"
keywords = ["queue", "job", "sqlite", "task"]
categories = ["data-structures", "database"]

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "qoxide-lib"
harness = false
